# py-svc-delphes

./: Procfile  README.md  newrelic.ini  pyproject.toml
delphes/: app.py  settings.py
delphes/models/: __init__.py  person.py
