[tool.poetry]
name = "svc-py-delphes"
version = "0.1.0"
description = ""
authors = ["Samuel Silva <samosaara@gmail.com>"]
readme = "README.md"
packages = [{include = "delphes"}]

[tool.poetry.dependencies]
python = "^3.10"
Eve = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
